# MCPHub

./: .gitignore  Cargo.toml  README.md
docs/: HANDBOOK.md  HANDBOOK.zh-CN.md  PLAN.md  UNREAL_WORKFLOW.md  UNREAL_WORKFLOW.zh-CN.md
src/: api.rs  cli.rs  config.rs  daemon.rs  facade.rs  lib.rs  main.rs  mcp_client.rs  models.rs  registry.rs  runtime.rs  schema_utils.rs  service.rs  unreal.rs
